[project]
name = "streamlitrunner"
version = "0.0.0"
description = "A library to run streamlit apps as local apps"
readme = "README.md"
authors = [
    { name = "Diogo Rossi", email = "rossi.diogo@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pywebview>=6.1",
    "streamlit>=1.52.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "sphinx-copybutton>=0.5.2",
    "sphinx>=8.1.3",
    "myst-parser>=4.0.1",
    "furo>=2025.12.19",
    "sphinxnotes-comboroles>=1.0",
]
dev = [
    "pytest>=9.0.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
docs = { cmd = "make html", cwd = "./docs/sphinx", help = "Make docs with sphinx" }
open = { cmd = "index.html", cwd = "./docs/sphinx/build/html", help = "Open sphinx docs" }
test = { cmd = "pytest", cwd = "./tests", help = "Test with pytest" }
